second iteration of app

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ pdf/*
 
 Chapter12/data/pubg/deaths/*.csv
 Chapter15/data/*
+Chapter16/data/311.db./Chapter17/model.pkl
+Chapter17/model.pkl
 Chapter16/data/311.db
