--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/philippk/anaconda3/envs/packt/bin/python"
+    "python.pythonPath": "/Users/philippk/anaconda3/envs/packt/bin/python",
+    "python.formatting.provider": "black"
 }
