--- a/environment.yml
+++ b/environment.yml
@@ -23,9 +23,10 @@ dependencies:
   - conda-forge:missingno
   - conda-forge:fastapi>=0.35.0
   - conda-forge:pydantic
-  - conda-forge:uvicorn
   - conda-forge:locust
   - conda-forge:vdom
+  - conda-forge:chalice
+  - conda-forge:uvicorn
   - pip
   - pip:
     - dvc
