--- a/environment.yml
+++ b/environment.yml
@@ -26,6 +26,8 @@ dependencies:
   - conda-forge:pydantic
   - conda-forge:locust
   - conda-forge:vdom
+  - conda-forge:sqlalchemy
+  - conda-forge:boto3
   - conda-forge:chalice
   - conda-forge:uvicorn
   - conda-forge:numba
